<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rvl_robotiq_driver</name>
  <version>1.0.0</version>
  <description>Control package for Robotiq 2F Gripper</description>
  <maintainer email="minh.tram@mavs.uta.edu">Minh Tram</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>

  <exec_depend>python3-pymodbus</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rvl_robotiq_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
