<?xml version="1.0"?>
<package format="2">
  <name>rvl_robot_description</name>
  <version>0.0.1</version>
  <description>URDF/XACRO for custom robot setup in RVL</description>

  <maintainer email="minh.tram@mavs.uta.edu">Minh "Jerry" Tram</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>roslaunch</exec_depend>

</package>
