<?xml version="1.0"?>
<package format="2">
  <name>rvl_robotiq_controller</name>
  <version>0.0.1</version>
  <description>The RVL Robotiq Gripper Controller package</description>

  <maintainer email="minh.tram@mavs.uta.edu">Minh "Jerry" Tram</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- generate custom messages -->
  <build_depend>message_generation</build_depend>

  <!-- Python 3 packages -->
  <depend>python3-pymodbus</depend>
  <depend>python3-numpy</depend>

  <!-- ROS standard packages -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Sphinx docs -->
  <export>
    <rosdoc config="rosdoc.yaml"/>    
  </export>
</package>
